--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -1,11 +1,28 @@
 .array-container {
-  position: absolute;
-  left: 100px;
-  /* top: 100px; */
+    left: 100px;
+    top: 100px;
 }
 
 .array-bar {
-  width: 2px;
-  display: inline-block;
-  margin: 0 1px;
+    width: 10px;
+    display: inline-block;
+    margin: 0 1px;
+}
+
+Button {
+    margin: 5px;
+}
+
+.array-container {
+    width: 100%;
+}
+
+.array-form {
+    margin-top: 5px;
+    width: 100%;
+    height: 100%;
+}
+
+.array-bar-container {
+
 }
