--- a/src/Main/Toolbar/Toolbar.css
+++ b/src/Main/Toolbar/Toolbar.css
@@ -6,8 +6,8 @@
     width: 5px;
     height: 60px;
     background-color: rgba(0, 0, 0, 0.8);
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
     display: inline-block;
 }
 
@@ -16,6 +16,7 @@ p {
     text-align: left;
     margin-bottom: 0px;
     margin-top: 15px;
+    font-size: 12px;
 }
 
 #sliderNoOfBars {
@@ -70,5 +71,5 @@ p {
 
 
 .sliderContainer {
-    width: 250px;
+    width: 100%;
 }
