--- a/src/Main/SortingVisualizer/SortingVisualizer.css
+++ b/src/Main/SortingVisualizer/SortingVisualizer.css
@@ -1,6 +1,9 @@
 .array-container {
-    left: 100px;
-    top: 100px;
+    /*left: 100px;*/
+    /*top: 100px;*/
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 .array-bar {
